--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        
-        <include layout="@layout/include_nav_bottom" />
+
+        <include
+            android:id="@+id/layout_bottom"
+            layout="@layout/include_nav_bottom" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
