--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/mainFragment">
 
-    <fragment android:id="@+id/mainFragment"
-        android:name="com.football.manager.view.fragments.MainFragment"/>
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.football.manager.view.fragments.MainFragment"
+        android:label="MainFragment"
+        tools:layout="@layout/fragment_main" />
+    <fragment
+        android:id="@+id/scheduleFragment"
+        android:name="com.football.manager.view.fragments.ScheduleFragment"
+        android:label="ScheduleFragment" />
+
+
 </navigation>
