--- a/app/src/main/res/layout/include_nav_bottom.xml
+++ b/app/src/main/res/layout/include_nav_bottom.xml
@@ -13,6 +13,7 @@
             app:itemIconTint="@color/selector_navigation_color"
             app:itemTextColor="@color/selector_navigation_color"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/menu_nav_bottom" />
 
