--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -13,7 +13,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <Spinner
-                android:id="@+id/spinner_years"
+                android:id="@+id/spinner_seasons"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@id/spinner_years"
+                app:layout_constraintTop_toBottomOf="@id/spinner_seasons"
                 tools:listitem="@layout/item_league" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
