--- a/app/src/main/res/layout/item_league.xml
+++ b/app/src/main/res/layout/item_league.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
-    android:layout_height="40dp">
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="120dp"
+        android:layout_height="40dp">
 
-    <TextView
-        android:id="@+id/text_league"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/round_0_gray"
-        android:gravity="center"
-        android:paddingStart="3dp"
-        android:paddingEnd="3dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:text="111" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/text_league"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_0_gray"
+            android:gravity="center"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="111" />
+    </LinearLayout>
+</layout>
