--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="gray_B7B7B7">#B7B7B7</color>
+    <color name="purple_3d195b">#3D195B</color>
 </resources>
