--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,60 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <include
             android:id="@+id/layout_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="180dp"
+            layout="@layout/include_header" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guild_line_1"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="10dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guild_line_2"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="10dp" />
-
-            <Spinner
-                android:id="@+id/spinner_seasons"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                app:layout_constraintStart_toStartOf="@id/guild_line_1"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/image_logo"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginTop="10dp"
-                android:importantForAccessibility="no"
-                app:layout_constraintStart_toStartOf="@id/guild_line_1"
-                app:layout_constraintTop_toBottomOf="@id/spinner_seasons" />
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/purple_3d195b"
-                app:layout_constraintTop_toBottomOf="@id/image_logo"
-                app:tabMode="scrollable"
-                app:tabTextColor="@color/white" />
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/pager"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                app:layout_constraintTop_toBottomOf="@id/tab_layout" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layout_header" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
