--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -6,34 +6,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_title"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:text="schedule"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Spinner
-                android:id="@+id/spinner_seasons"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/layout_title" />
+        <!--            <Spinner-->
+        <!--                android:id="@+id/spinner_seasons"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="30dp"-->
+        <!--                app:layout_constraintEnd_toEndOf="parent"-->
+        <!--                app:layout_constraintStart_toStartOf="parent"-->
+        <!--                app:layout_constraintTop_toTopOf="@id/layout_title" />-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_league"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@id/spinner_seasons"
-                tools:listitem="@layout/item_league" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!--            <androidx.recyclerview.widget.RecyclerView-->
+        <!--                android:id="@+id/recyclerview_league"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="40dp"-->
+        <!--                android:layout_marginTop="10dp"-->
+        <!--                android:orientation="horizontal"-->
+        <!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+        <!--                app:layout_constraintTop_toBottomOf="@id/spinner_seasons"-->
+        <!--                tools:listitem="@layout/item_league" />-->
+        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-<!--        <include-->
-<!--            android:id="@+id/layout_bottom"-->
-<!--            layout="@layout/include_nav_bottom" />-->
+        <!--        <include-->
+        <!--            android:id="@+id/layout_bottom"-->
+        <!--            layout="@layout/include_nav_bottom" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
