feat : spinner create

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray">#808080</color>
     <color name="gray_B7B7B7">#B7B7B7</color>
     <color name="purple_3d195b">#3D195B</color>
+    <color name="purple_1E0631">#1E0631</color>
 </resources>
