--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -12,19 +12,21 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="10dp" />
+            app:layout_constraintGuide_begin="20dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guild_line_2"
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="10dp" />
+            app:layout_constraintGuide_end="20dp" />
 
         <Spinner
             android:id="@+id/spinner_seasons"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/spinner_background"
             app:layout_constraintStart_toStartOf="@id/guild_line_1"
             app:layout_constraintTop_toTopOf="parent" />
 
