--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,14 +8,16 @@
 
         <include
             android:id="@+id/layout_header"
+            layout="@layout/include_header"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            layout="@layout/include_header" />
+            android:layout_height="190dp" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_header" />
