--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -23,31 +23,68 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <RadioGroup
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/toggle_group"
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                app:checkedButton="@id/button_ranking"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:singleSelection="true">
 
-                <RadioButton
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/button_ranking"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:button="@null"
-                    android:layout_weight="0.33" />
+                    android:layout_weight="0.5"
+                    android:text="@string/radio_ranking"
+                    android:textSize="12sp" />
 
-                <RadioButton
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/button_record"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:button="@null"
-                    android:layout_weight="0.33" />
+                    android:layout_weight="0.5"
+                    android:text="@string/radio_record"
+                    android:textSize="12sp" />
+            </com.google.android.material.button.MaterialButtonToggleGroup>
 
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:button="@null"
-                    android:layout_weight="0.33" />
-            </RadioGroup>
+            <!--            <RadioGroup-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="25dp"-->
+            <!--                android:background="@drawable/selector_radio"-->
+            <!--                android:checked="true"-->
+            <!--                android:orientation="horizontal"-->
+            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent">-->
+
+            <!--                <RadioButton-->
+            <!--                    android:id="@+id/radio_ranking"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_margin="1dp"-->
+            <!--                    android:layout_weight="0.5"-->
+            <!--                    android:background="@drawable/selector_radio"-->
+            <!--                    android:button="@null"-->
+            <!--                    android:checked="true"-->
+            <!--                    android:text="@string/radio_ranking"-->
+            <!--                    android:textAlignment="center"-->
+            <!--                    android:textStyle="bold" />-->
+
+            <!--                <RadioButton-->
+            <!--                    android:id="@+id/radio_record"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_margin="1dp"-->
+            <!--                    android:layout_weight="0.5"-->
+            <!--                    android:background="@drawable/selector_radio"-->
+            <!--                    android:button="@null"-->
+            <!--                    android:text="@string/radio_record"-->
+            <!--                    android:textAlignment="center"-->
+            <!--                    android:textStyle="bold" />-->
+            <!--            </RadioGroup>-->
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
