--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,8 @@
     <color name="gray">#808080</color>
     <color name="gray_B7B7B7">#B7B7B7</color>
     <color name="purple_3d195b">#3D195B</color>
+    <color name="green_39D017">#39D017</color>
     <color name="purple_1E0631">#1E0631</color>
+    <color name="red_ff0000">#FF0000</color>
+    <color name="blue_0027FF">#0027FF</color>
 </resources>
