--- a/app/src/main/res/drawable/circle_dark_blue.xml
+++ b/app/src/main/res/drawable/circle_dark_blue.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/blue_03A9F4" />
+    <solid android:color="@color/blue_0027FF" />
     <size
         android:width="15dp"
         android:height="15dp" />
