refactor : item databinding 처리 수정

--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="vm"
+            type="com.football.manager.viewmodel.RankingViewModel" />
+
         <variable
             name="standing"
             type="com.football.manager.core_network.model.detail.Standing" />
@@ -13,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_left_right_gray"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -30,11 +36,12 @@
                 android:background="@drawable/round_8_green"
                 android:contentDescription="@null"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:showRanking="@{standing.rank}" />
 
             <TextView
                 android:id="@+id/text_ranking"
-                android:layout_width="wrap_content"
+                android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
@@ -49,18 +56,20 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:contentDescription="@null"
+                app:bindingImage="@{standing.team.logo}"
                 app:layout_constraintLeft_toRightOf="@id/text_ranking"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_name"
-                android:layout_width="90dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
                 android:gravity="center"
                 android:maxLines="2"
                 android:text="@{standing.team.name}"
                 app:layout_constraintLeft_toRightOf="@id/image_logo"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Tottenham Hotspur" />
 
