feat : color add

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="purple_1E0631">#1E0631</color>
     <color name="red_ff0000">#FF0000</color>
     <color name="blue_0027FF">#0027FF</color>
+    <color name="blue_03A9F4">#03A9F4</color>
 </resources>
