--- a/app/src/main/res/drawable/round_8_blue.xml
+++ b/app/src/main/res/drawable/round_8_blue.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/green_39D017" />
+    <solid android:color="@color/blue_03A9F4" />
 
     <corners
         android:bottomRightRadius="8dp"
